<?xml version="1.0"?>
<package format="2">

  <name>la3dm</name>
  <version>0.0.1</version>
  <description>The la3dm package</description>

  <maintainer email="kdoherty@stevens.edu">kevin</maintainer>
  <maintainer email="jwang92@stevens.edu">Jinkun Wang</maintainer>

  <license>MIT</license>

  <author email="kdoherty@stevens.edu">kevin</author>
  <author email="jwang92@stevens.edu">Jinkun Wang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

</package>
